force-app/main/default/objects/EngagementAggregation__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>DataSourceObject</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>DataSource</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>Id</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <primaryIndexOrder>1</primaryIndexOrder>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>KQ_Id</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>KEY_QUALIFIER</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyQualifier__c</fullName>
        <label>Key Qualifier</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>KeyQualifier</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEngagementTimestamp__c</fullName>
        <label>Last Engagement Timestamp</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>LastEngagementTimestamp</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>LastModifiedBy</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>LastModifiedDate</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <mktDataLakeAttributes>
        <creationType>System</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>